--- a/Donativos_EDA-Profe.ipynb
+++ b/Donativos_EDA-Profe.ipynb
@@ -1288,14 +1288,14 @@
    ],
    "source": [
     "# Calcular las medias agrupadas por SES\n",
-    "media_por_ses = demograficos.groupby('SES')['PER_CAPTITA_INCOME'].mean()\n",
+    "mediana_por_ses = demograficos.groupby('SES')['PER_CAPTITA_INCOME'].median()\n",
     "\n",
     "# Crear un subDataFrame con los valores de PER_CAPTITA_INCOME igual a 0\n",
     "sub_df = demograficos[demograficos['PER_CAPTITA_INCOME'] == 0]\n",
     "\n",
     "# Asignar las medias agrupadas por SES a los valores de PER_CAPTITA_INCOME igual a 0\n",
-    "for ses, media in media_por_ses.items():\n",
-    "    sub_df.loc[sub_df['SES'] == ses, 'PER_CAPTITA_INCOME'] = media\n",
+    "for ses, mediana in mediana_por_ses.items():\n",
+    "    sub_df.loc[sub_df['SES'] == ses, 'PER_CAPTITA_INCOME'] = mediana\n",
     "\n",
     "# Actualizar el DataFrame original con los cambios\n",
     "demograficos.update(sub_df)\n",
@@ -1500,6 +1500,7 @@
    "outputs": [],
    "source": [
     "# Mas variables a eliminar\n",
+    "eliminar.append('PCT_MALE_MILITARY')\n",
     "eliminar.append('PCT_MALE_VETERANS')\n",
     "eliminar.append('PCT_VIETNAM_VETERANS')"
    ]
